<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentJogador"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".JogadorFragment">

    <EditText
        android:id="@+id/etIdJogador"
        android:layout_width="160dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/id_jogador"
        android:importantForAutofill="no"
        android:inputType="number"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.063"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.095" />

    <EditText
        android:id="@+id/etNomeJogador"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/nome"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etIdJogador" />

    <EditText
        android:id="@+id/etDataNascJogador"
        android:layout_width="170dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/data_nasc"
        android:importantForAutofill="no"
        android:inputType="date"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.066"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeJogador"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnBuscarJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="64dp"
        android:hint="@string/buscar"
        android:importantForAutofill="no"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toEndOf="@+id/etIdJogador"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAlturaJogador"
        android:layout_width="91dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/altura"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.097"
        app:layout_constraintStart_toEndOf="@+id/etDataNascJogador"
        app:layout_constraintTop_toBottomOf="@+id/etNomeJogador"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etPesoJogador"
        android:layout_width="84dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/peso"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toEndOf="@+id/etAlturaJogador"
        app:layout_constraintTop_toBottomOf="@+id/etNomeJogador"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnInserirJogador"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="72dp"
        android:hint="@string/inserir"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/btnModificarJogador"
        app:layout_constraintHorizontal_bias="0.348"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDataNascJogador" />

    <Button
        android:id="@+id/btnModificarJogador"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="64dp"
        android:hint="@string/modificar"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPesoJogador" />

    <Button
        android:id="@+id/btnExcluirJogador"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="32dp"
        android:hint="@string/excluir"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/btnListarJogador"
        app:layout_constraintEnd_toStartOf="@+id/btnListarJogador"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnListarJogador" />

    <Button
        android:id="@+id/btnListarJogador"
        android:layout_width="122dp"
        android:layout_height="48dp"
        android:layout_marginTop="413dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="22dp"
        android:hint="@string/listar"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/tvSaidaJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSaidaJogador"
        android:layout_width="412dp"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spTimeJogador" />

    <Spinner
        android:id="@+id/spTimeJogador"
        android:layout_width="372dp"
        android:layout_height="48dp"
        android:layout_marginTop="259dp"
        android:layout_marginBottom="200dp"
        app:layout_constraintBottom_toTopOf="@+id/tvSaidaJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.405"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTituloJogador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:hint="@string/jogador"
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/etIdJogador"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>